--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,7 +45,7 @@ code {
 }
 .button, a.button {
   border-radius: 2*$gutter;
-  border: 2px solid $blue;
+  border: 0px;
   @include transition-property(background, border);
   @include transition-duration(0.2s);
   &:hover, &:focus {
@@ -208,7 +208,7 @@ input:not([type=submit]), textarea {
       margin: 0 $gutter;
       @include transition(all, 0.2s, ease);
     }
-    p {
+    .right {
       color: #fff;
       float: none;
       height: 50px;
@@ -222,9 +222,31 @@ input:not([type=submit]), textarea {
         text-align: right;
         width: 180px;
       }
-      img {
-        height: 50px;
+      .qrcode {
+        position: relative;
         float: right;
+        img.img {
+        height: 50px;
+        float: left;
+       }
+       img.tooltip {
+        bottom: 50px;
+        border: 1px solid $line;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+        right: 0px;
+        opacity: 0;
+        position: absolute;
+        @include transition(all, 0.4s, ease);
+        visibility: hidden;
+        width: 250px;
+       }
+       &:hover {
+        img.tooltip {
+          opacity: 1;
+          visibility: visible;
+          @include transform(translateY(-10px));
+        }
+       }
       }
     }
   }
@@ -238,7 +260,7 @@ input:not([type=submit]), textarea {
         margin: 0 3% 0 0;
         width: auto;
       }
-      p {
+      .right {
         float: right;
       }
     }
@@ -618,7 +640,7 @@ input:not([type=submit]), textarea {
         float: left;
         line-height: 50px;
         margin: 0px;
-        padding: $gutter $gutter $gutter*1.5 0;
+        padding: $gutter $gutter $gutter 0;
       }
       h1 {
         color: #fff;
@@ -665,6 +687,76 @@ input:not([type=submit]), textarea {
         color: #465AA2;
         &:hover, &:active {
           background: #f1f1f1;
+        }
+      }
+      form * {
+        display: inline-block;
+        vertical-align: middle;
+      }
+      form {
+        float: right;
+        margin-top: 25px;
+        height: 52px;
+        width: 380px;
+        .button, input:not([type=submit]) {
+          border: 0;
+          line-height: 200%;
+          font-family: $font;
+          font-size: inherit;
+          padding: $gutter/2 1.5*$gutter;
+        }
+        .button {
+          border-radius: 0 2*$gutter 2*$gutter 0;
+          margin-left: -$gutter/4;
+          padding: 5px 30px;
+          @include tablet {
+            @include font-size($small);
+            padding: $gutter/2 $gutter/2;
+            width: $gutter*4.5;
+          }
+          @include medium {
+            @include font-size($small);
+            padding: $gutter/2 $gutter/2;
+            width: $gutter*4.5;
+          }
+        }
+        input:not([type=submit]) {
+          background: #FFF;
+          border-radius: 2*$gutter 0 0 2*$gutter;
+          color: $black;
+          margin: 0px;
+          padding: $gutter/4 $gutter+5;
+          width: $gutter*9;
+          @include tablet {
+            @include font-size($small);
+            padding: $gutter/2 $gutter*0.75;
+            width: $gutter*9;
+          }
+          @include medium {
+            @include font-size($small);
+            padding: $gutter/2 $gutter*0.75;
+            width: $gutter*5;
+          }
+        }
+        ::-webkit-input-placeholder {
+          -webkit-backface-visibility: hidden;
+          -webkit-transform-style: preserve-3d;
+          -webkit-transform: translate3d(0, 0, 0);
+        }
+        [placeholder]:focus::-webkit-input-placeholder {
+          @include transition(all, 0.2s, ease);
+          @include transform(translate(5%, 0));
+          opacity: 0;
+        }
+        @include tablet {
+          display: block;
+          float: none;
+          margin: 0 auto $gutter auto;
+          max-width: 300px;
+          width: auto;
+        }
+        @include medium {
+          width: auto;
         }
       }
     }
@@ -778,8 +870,17 @@ input:not([type=submit]), textarea {
     /* Speakers */
     
     &.speakers {
-      background: #f8f8f8;
-      padding-bottom: 0px;
+      //background: #f8f8f8;
+      .button {
+        @include font-size($normal+2);
+        padding: $gutter/2 $gutter*2;
+        max-width: 60%;
+        margin: 0 auto;
+      }
+      p {
+        margin-top: $gutter/2;
+      }
+      // padding-bottom: 0px;
       ul {
         padding: 0px;
         margin: 0px;
@@ -1004,13 +1105,33 @@ input:not([type=submit]), textarea {
     }
     /* venue */
     &.venue {
-      padding-top: 0px;
+      position: relative;
+      padding: 0px;
+      margin-bottom:$gutter*7;
+      .tip {
+        color: $black;
+        @include font-size($large+4);
+        height: 50px;
+        line-height: 50px;
+        letter-spacing: $gutter/4;
+        margin-top: -25px;
+        position: absolute;  
+        top: 50%;
+        text-align: center;
+        text-transform: uppercase;
+        width: 100%;
+        z-index: 1;
+      }
       .wrapper{
+        @include filter(grayscale(100%));
+        opacity: 0.25;
         .left,.right {
           width: 50%;
         }
         .left{
           float: left;
+          padding-right: 30px;
+          box-sizing: border-box;
           h1 {
             color: #333;
             font-weight: normal;
