--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
       <nav class='wrapper'>
         <a href='#item1'>{{ menu.item1 }}</a>
         <a href='#item2'>{{ menu.item2 }}</a>
-        <a href='#item3'>{{ menu.item3 }}</a>
+<!--         <a href='#item3'>{{ menu.item3 }}</a> -->
         <a href='#item4'>{{ menu.item4 }}</a>
         <a href='#item5'>{{ menu.item5 }}</a>
         <a href='#item6'>{{ menu.item6 }}</a>
@@ -62,289 +62,16 @@
     <div class='title'>
       <h1>{{ menu.item2 }}</h1>
     </div>
-    <ul>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon weibo'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon weibo'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-      <li>
-        <img src='/images/speaker1.jpg' />
-        <div class='cover'>
-          <div class='info'>
-            <h4>{{ speakers.speaker1.name }}</h4>
-            <p>{{ speakers.speaker1.title }}</p>
-            <a href='#' class='icon github'></a>
-            <a href='#' class='icon twitter'></a>
-          </div>
-        </div>
-        </a>
-      </li>
-    </ul>
+    <a href='https://jinshuju.net/f/Dfys92' target='new' class='button'>{{ speakers.vote.button }}</a>
+    <p>{{ speakers.vote.content }}</p>
   </section>
-  <!-- Schedule -->
-  <section class='section schedule' id='item3'>
-    <div class='title'>
-      <h1>{{ menu.item3 }}</h1>
-    </div>
-    <div class='wrapper'>
-      <div class='list day1'>
-        <h2>7/11</h2>
-        <ul>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>Then.js 异步库的实现原理及优缺点</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>Patrisika - Theoretical and Practical Code Generation</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class='list day2'>
-        <h2>7/12</h2>
-        <ul>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>JS中国开发者大会介绍</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-          <li>
-            <time>08:15</time>
-            <div>
-              <h4>签到</h4>
-              <p>John Doe</p>
-              <a>演示文稿</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
+
   <!-- Banner -->
   <section class='banner second'>
     <div class='wrapper'>
-        <h1>{{ event.title }}</h1>
-        <p>{{ event.venue }}</p>
-        <a class='button' href='#'>{{ button.content }}</a>
+      <h1>{{ event.title }}</h1>
+      <p>{{ event.venue }}</p>
+      <a class='button' href='#'>{{ button.content }}</a>
     </div>
   </section>
   <!-- sponsers-->
@@ -353,39 +80,65 @@
       <h1>{{ menu.item4 }}</h1>
     </div>
     <div class='wrapper'>
-    <ul>
-      <li><a href='http://wiredcraft.com/' target='new'><img src='/images/wiredcraft.png' width='250' /></a></li>
-      <li><a href='http://www.qiniu.com/' target='new'><img src='/images/qiniu.png' width="250" /></a></li>
-      <li><a href='http://bearyinnovative.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a></li>
-      <li><a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a></li>
-      <li><a href='http://careers.ef.com/categories/technology/learning-labs/' target='new'><img src='/images/ef.png' width='130' /></a></li>
-      <li><a href='https://coding.net/' target='new'><img src='/images/teambition.png' width='250' /></a></li>
-      <li><a href='http://makeblock.cc' target='new'><img src='/images/makeblock.jpg' width='250' /></a></li>
-
-    </ul>
+      <ul>
+        <li>
+          <a href='http://wiredcraft.com/' target='new'><img src='/images/wiredcraft.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://www.qiniu.com/' target='new'><img src='/images/qiniu.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://bearyinnovative.com/' target='new'><img src='/images/bearyinnovative.png' height='130' /></a>
+        </li>
+        <li>
+          <a href='https://coding.net/' target='new'><img src='/images/coding.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://careers.ef.com/categories/technology/learning-labs/' target='new'><img src='/images/ef.png' width='130' /></a>
+        </li>
+        <li>
+          <a href='https://coding.net/' target='new'><img src='/images/teambition.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://makeblock.cc' target='new'><img src='/images/makeblock.jpg' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://www.upyun.com/' target='new'><img src='/images/upyun.png' width='250' /></a>
+        </li>
+      </ul>
     </div>
   </section>
-   <!-- media parter-->
+  <!-- media parter-->
   <section class='section mediaparter' id='item5'>
     <div class='title'>
       <h1>{{ menu.item5 }}</h1>
     </div>
     <div class='wrapper'>
-    <ul>
-      <li><a href='http://segmentfault.com/' target='new'><img src='/images/sf.png' width='250' /></a></li>
-      <li><a href='https://knewone.com/' target='new'><img src='/images/knewone.png' width="250" /></a></li>
-      <li><a href='http://www.ituring.com.cn/' target='new'><img src='/images/turing.jpg' width='250' /></a></li>
-      <li><a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a></li>
-    </ul>
+      <ul>
+        <li>
+          <a href='http://segmentfault.com/' target='new'><img src='/images/sf.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='https://knewone.com/' target='new'><img src='/images/knewone.png' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://www.ituring.com.cn/' target='new'><img src='/images/turing.jpg' width='250' /></a>
+        </li>
+        <li>
+          <a href='http://www.broadview.com.cn/' target='new'><img src='/images/broadview.png' width='250' /></a>
+        </li>
+      </ul>
     </div>
   </section>
   <!-- Venue -->
   <section class='section venue' id='item6'>
+  <div class='tip'>{{ button.content }}</div>
     <div class='wrapper'>
       <div class='left'>
         <h1>{{ menu.item6 }}</h1>
         <h4>{{ venue.address | raw }}</h4>
         <p>{{ venue.detail }}</p>
+        <a target='new' href='http://qh.vanke.com/'>http://qh.vanke.com/</a>
       </div>
       <div class='right'>
         <img src='/images/venue.jpg' />
@@ -393,15 +146,14 @@
     </div>
   </section>
   <!-- Banner -->
-
   <section class='banner third'>
     <div class='wrapper'>
-        <h1>{{ event.title }}</h1>
-        <p>{{ event.venue }}</p>
-        <a class='button' href='#'>{{ button.content }}</a>
+      <h1>{{ event.title }}</h1>
+      <p>{{ event.venue }}</p>
+      {% include 'partials/_subscribe.html' %}
+      <!-- <a class='button' href='#'>{{ button.content }}</a> -->
     </div>
   </section>
-
   <!-- Footer -->
   <footer id='footer'>
     {% include 'partials/_footer.html' %}
